--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         <div class="btn-sec4">
                             <div class="p-btn-sec4">Meet all customers</div>
                             <div class="arrow-btn-sec4">
-                                <img src="./img/Arrow.png" style="" alt="" />
+                                <img src="./img/arrow1.png" style="" alt="" />
                             </div>
                         </div>
                     </div>
