--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                 <img src="./img/body3-box2-sec4-1.png" style="width: 48px; height: 48px" alt="" />
                             </div>
                             <div class="testimonial__logo">
-                                <img src="./img/body3-box2-sec4-2.png" style="width: 48px; height: 48px" alt="" />
+                                <img src="./img/Logo (14).png" style="width: 48px; height: 48px" alt="" />
                             </div>
                             <div class="testimonial__logo">
                                 <img src="./img/body3-box2-sec4-3.png" style="width: 48px; height: 48px" alt="" />
