--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             </div>
                             <div class="clients__feature-title">National Associations</div>
                         </div>
-                        <div class="clients__feature-desc">
+                        <div class="clients__feature-desc" style="width: 240px; height: 80px;" alt="">
                             Our membership management software provides full automation of
                             membership renewals and payments
                         </div>
